--- a/src/assets/style/rem.css
+++ b/src/assets/style/rem.css
@@ -1,70 +1,23 @@
-@media only screen and (max-width: 1080px), only screen and (max-device-width:1080px) {
- html,body {
-   font-size:16.875px;
- }
+html {
+    font-size: 125%; /* 20÷16=125% */
 }
-@media only screen and (max-width: 960px), only screen and (max-device-width:960px) {
- html,body {
-   font-size:15px;
- }
+@media only screen and (min-width: 415px) {
+  html,body {
+    font-size: 80.86%;
+  }
 }
-@media only screen and (max-width: 800px), only screen and (max-device-width:800px) {
- html,body {
-   font-size:12.5px;
- }
+@media only screen and (min-width: 481px){
+    html {
+        font-size: 188%!important; /* 30.08÷16=188% */
+    }
 }
- @media only screen and (max-width: 720px), only screen and (max-device-width:720px) {
- html,body {
-   font-size:11.25px;
- }
- }
- @media only screen and (max-width: 640px), only screen and (max-device-width:640px) {
- html,body {
-   font-size:10px;
- }
- }
- @media only screen and (max-width: 600px), only screen and (max-device-width:600px) {
- html,body {
-   font-size:9.375px;
- }
- }
- @media only screen and (max-width: 540px), only screen and (max-device-width:540px) {
- html,body {
-   font-size:8.4375px;
- }
- }
- @media only screen and (max-width: 480px), only screen and (max-device-width:480px) {
- html,body {
-   font-size:7.5px;
- }
- }
- @media only screen and (max-width: 414px), only screen and (max-device-width:414px) {
- html,body {
-   font-size:6.46875px;
- }
- }
- @media only screen and (max-width: 400px), only screen and (max-device-width:400px) {
- html,body {
-   font-size:6.25px;
- }
- }
- @media only screen and (max-width: 375px), only screen and (max-device-width:375px) {
- html,body {
-   font-size:5.859375px;
- }
- }
- @media only screen and (max-width: 360px), only screen and (max-device-width:360px) {
- html,body {
-   font-size:5.625px;
- }
- }
- @media only screen and (max-width: 320px), only screen and (max-device-width:320px) {
- html,body {
-   font-size:5px;
- }
- }
- @media only screen and (max-width: 240px), only screen and (max-device-width:240px) {
- html,body {
-   font-size:3.75px;
- }
- }
+@media only screen and (min-width: 561px){
+    html {
+        font-size: 218%!important; /* 34.88÷16=218% */
+    }
+}
+@media only screen and (min-width: 641px){
+    html {
+        font-size: 250%!important; /* 40÷16=250% */
+    }
+}
